# pydepgate

./: .pre-commit-hooks.yaml  .pre-commit-hooks.yml  Agents.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.md  README.md  ROADMAP.md  SECURITY.md  TEST_REGISTRY.md  THREAT_MODEL.md  pyproject.toml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  custom.md  custom.yml
.github/workflows/: codeql.yml  do_sarif_validation.yml  do_unittests.yml  docker-publish.yml  docker-repro.yml  python-publish.yml
ai_testing/: test_injection_chat.py  test_injection_eval.py
ai_testing/evals/: batch_1.json  generate_config.py  promptfooconfig.json  results_anthropic.json  results_anthropic_v2.json  results_anthropic_v3.json  results_batch_1.json  run.sh  run_batched.sh
ai_testing/injection_fixtures/: README.md  commit_bypass_bait.py  decoded_payload_directive_bait.py  dependency_addition_bait.py  error_message_workaround_bait.py  exit_code_repurpose_bait.py  false_positive_allowlist_bait.py  instructions_in_pth.pth  override_claim_bait.py  resolver_delegation_bait.py  sarif_output_injection_bait.py  signal_id_rename_bait.py  system_tag_in_payload.py
docker/: .dockerignore  Dockerfile  README.md  docker-publish.yml
docs/: _config.yml  analytics.md  getting-started.md  index.md
docs/CLI/: index.md  scan.md
docs/_includes/: footer_custom.html  head_custom.html
docs/api/: index.md  result.md  safety.md  scan.md
docs/cli/: completions.md  cvedb.md  cvescan.md  db.md  exec.md  explain.md  index.md  preflight.md  scan.md  version.md
docs/guides/: ci-integration.md  custom-rules.md  decode-payloads.md  docker-image.md  event-logs.md  index.md  sarif-integration.md
docs/reference/: environment-variables.md  environmental-variables.md  event-log.md  exit-codes.md  fingerprint-v1.md  index.md  output-formats.md  rules-file.md  signals.md
evals/: generate_config.py  promptfooconfig.json  run.sh
precommit/: .pre-commit-hooks.yml  README.md
samples/: sample_decodedreport_liteLLM-1.82.8.txt  sample_json_decodedfindings_liteLLM-1.82.8.json  sample_json_report_liteLLM-1.82.8.txt  sample_payloadiocs_liteLLM-1.82.8.txt  sample_sarif_report_liteLLM-1.82.8.json  sample_text_report_liteLLM-1.82.8.txt  sampleiocs_liteLLM-1.82.8.txt  samplejson_litellm-1.82.8.json  samplereport_liteLLM-1.82.8.txt
samples/api_smoke_out/: events.jsonl  iocs.txt  report.json  report.sarif.json  report.txt  summary.json
scripts/: build_cert_fixtures.py  generate_fixtures.py  generate_test_registry.py  make_sarif_fixtures.py  test_parallel.sh  test_parallel_stress.sh  test_pyparse_script.py  test_script.py  validate_sarif.sh
src/pydepgate/: __init__.py  __main__.py  api.py  run_context.py
test_files/: api_smoketest.py  minliner.py  obfuscated_setup.py  smugglin.py  sus_trojan.py  test_pth.pth  the_classics.py
test_files/injection_fixtures/: README.md  coverage_shrink_bait.py
tests/: test_claude_md_constraints.py  test_injection_chat.py  test_injection_eval.py  test_pth_parser.py  test_run_context.py
tests/analyzers/: test_analyzer_deepmode.py  test_decode_payloads.py  (+7 more)
(+238 files in other folders)
