[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "pydepgate"
version = "0.0.4"
description = "Lightweight Python runner that interdicts suspicious startup behavior."
requires-python = ">=3.11"

[project.scripts]
pydepgate = "pydepgate.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pydepgate = ["py.typed"]