[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"


[project]
name = "pydepgate"
version = "0.4.2
description = "A zero dependency lightweight static analyzer that detects weird startup behaviors in python."
requires-python = ">=3.11"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Ikari", email = "ikari@nuclear-treestump.com" }
]
keywords = ["security", "supply-chain", "python", "startup", "analysis", "static-analyzer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Monitoring",
]
urls = { Homepage = "https://github.com/nuclear-treestump/pydepgate", Repository = "https://github.com/nuclear-treestump/pydepgate" }

[project.scripts]
pydepgate = "pydepgate.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pydepgate = ["py.typed"]
